Try to fix the jumping bg issue on mobile

--- a/src/css/_page_layout.scss
+++ b/src/css/_page_layout.scss
@@ -17,7 +17,7 @@ body {
 
 #container {
   display: grid;
-  min-height: 100vh;
+  min-height: 100dvh;
   grid-template-columns: 1fr 2fr 1fr;
   grid-template-rows: 100px 1fr 100px;
   grid-template-areas:
